--- a/configs/google_com_http3_upstream_proxy.yaml
+++ b/configs/google_com_http3_upstream_proxy.yaml
@@ -1,3 +1,4 @@
+# An example config which accepts HTTP/1 requests over TCP and forwards them to google using HTTP/3
 admin:
   address:
     socket_address:
