Address comments and protect QUIC changes with build flag.
Signed-off-by: Renjie Tang <renjietang@google.com>

--- a/source/common/runtime/BUILD
+++ b/source/common/runtime/BUILD
@@ -2,6 +2,7 @@ load(
     "//bazel:envoy_build_system.bzl",
     "envoy_cc_library",
     "envoy_package",
+    "envoy_select_enable_http3",
 )
 
 licenses(["notice"])  # Apache 2
@@ -24,8 +25,9 @@ envoy_cc_library(
         "//source/common/common:hash_lib",
         "//source/common/singleton:const_singleton",
         "//source/common/singleton:threadsafe_singleton",
+    ] + envoy_select_enable_http3([
         "//source/common/quic/platform:flags_impl_lib",
-    ],
+    ]),
 )
 
 envoy_cc_library(
