formatter: empty config proto for req_without_query
Signed-off-by: Tero Saarni <tero.saarni@est.tech>

--- a/source/extensions/formatter/req_without_query/BUILD
+++ b/source/extensions/formatter/req_without_query/BUILD
@@ -32,5 +32,6 @@ envoy_cc_extension(
     deps = [
         "//include/envoy/registry",
         "//source/extensions/formatter/req_without_query:req_without_query_lib",
+        "@envoy_api//envoy/extensions/formatter/req_without_query/v3:pkg_cc_proto",
     ],
 )
