Avoid namespace pollution issues
Signed-off-by: Raul Gutierrez Segales <rgs@pinterest.com>

--- a/test/common/http/BUILD
+++ b/test/common/http/BUILD
@@ -240,6 +240,7 @@ envoy_cc_test(
     name = "conn_manager_utility_test",
     srcs = ["conn_manager_utility_test.cc"],
     deps = [
+        ":ip_detection_extensions_lib",
         "//source/common/common:random_generator_lib",
         "//source/common/event:dispatcher_lib",
         "//source/common/http:conn_manager_lib",
@@ -247,8 +248,6 @@ envoy_cc_test(
         "//source/common/network:address_lib",
         "//source/common/network:utility_lib",
         "//source/common/runtime:runtime_lib",
-        "//source/extensions/http/original_ip_detection/custom_header:custom_header_lib",
-        "//source/extensions/http/original_ip_detection/xff:xff_lib",
         "//source/extensions/request_id/uuid:config",
         "//test/mocks/http:http_mocks",
         "//test/mocks/local_info:local_info_mocks",
@@ -461,5 +460,15 @@ envoy_cc_fuzz_test(
         "//source/common/http:header_map_lib",
         "//source/common/http:path_utility_lib",
         "//test/fuzz:utility_lib",
+    ],
+)
+
+envoy_cc_test_library(
+    name = "ip_detection_extensions_lib",
+    srcs = ["ip_detection_extensions.cc"],
+    hdrs = ["ip_detection_extensions.h"],
+    deps = [
+        "//source/extensions/http/original_ip_detection/custom_header:custom_header_lib",
+        "//source/extensions/http/original_ip_detection/xff:xff_lib",
     ],
 )
