docs: Add rstchceck and otber rst checks
Signed-off-by: Ryan Northey <ryan@synca.io>

--- a/tools/code_format/BUILD
+++ b/tools/code_format/BUILD
@@ -1,4 +1,5 @@
 load("@pylint_pip3//:requirements.bzl", "requirement")
+load("@docs_pip3//:requirements.bzl", doc_requirement = "requirement")
 load("//bazel:envoy_build_system.bzl", "envoy_package")
 load("//tools/base:envoy_python.bzl", "envoy_py_binary")
 
@@ -20,5 +21,18 @@ envoy_py_binary(
         requirement("flake8"),
         requirement("pep8-naming"),
         requirement("yapf"),
+    ],
+)
+
+envoy_py_binary(
+    name = "tools.code_format.rst_check",
+    data = [
+        "//:.rstcheck.cfg",
+    ],
+    deps = [
+        "//tools/base:checker",
+        "//tools/base:utils",
+        doc_requirement("rstcheck"),
+        doc_requirement("Sphinx"),
     ],
 )
