--- a/source/extensions/tracers/zipkin/BUILD
+++ b/source/extensions/tracers/zipkin/BUILD
@@ -43,7 +43,7 @@ envoy_cc_library(
         "//include/envoy/network:address_interface",
         "//include/envoy/runtime:runtime_interface",
         "//include/envoy/thread_local:thread_local_interface",
-        "//include/envoy/tracing:http_tracer_interface",
+        "//include/envoy/tracing:trace_driver_interface",
         "//include/envoy/upstream:cluster_manager_interface",
         "//source/common/common:enum_to_int",
         "//source/common/common:hex_lib",
@@ -56,7 +56,8 @@ envoy_cc_library(
         "//source/common/json:json_loader_lib",
         "//source/common/network:address_lib",
         "//source/common/singleton:const_singleton",
-        "//source/common/tracing:http_tracer_lib",
+        "//source/common/tracing:common_values_lib",
+        "//source/common/tracing:null_span_lib",
         "//source/common/upstream:cluster_update_tracker_lib",
         "@com_github_openzipkin_zipkinapi//:zipkin_cc_proto",
         "@envoy_api//envoy/config/trace/v3:pkg_cc_proto",
