--- a/source/extensions/tracers/skywalking/BUILD
+++ b/source/extensions/tracers/skywalking/BUILD
@@ -44,11 +44,12 @@ envoy_cc_library(
         ":trace_segment_reporter_lib",
         "//include/envoy/common:time_interface",
         "//include/envoy/server:tracer_config_interface",
-        "//include/envoy/tracing:http_tracer_interface",
+        "//include/envoy/tracing:trace_driver_interface",
         "//source/common/common:macros",
         "//source/common/http:header_map_lib",
         "//source/common/runtime:runtime_lib",
-        "//source/common/tracing:http_tracer_lib",
+        "//source/common/tracing:common_values_lib",
+        "//source/common/tracing:null_span_lib",
         "@envoy_api//envoy/config/trace/v3:pkg_cc_proto",
     ],
 )
