remove unknown ext from fuzz tests
Signed-off-by: Asra Ali <asraa@google.com>

--- a/test/server/BUILD
+++ b/test/server/BUILD
@@ -1,5 +1,5 @@
 load(
-    "//bazel:envoy_build_system.bzl",
+65;6203;1c    "//bazel:envoy_build_system.bzl",
     "envoy_benchmark_test",
     "envoy_cc_benchmark_binary",
     "envoy_cc_fuzz_test",
@@ -9,6 +9,7 @@ load(
     "envoy_select_hot_restart",
 )
 load("//source/extensions:all_extensions.bzl", "envoy_all_extensions")
+load("//source/extensions:extensions_build_config.bzl", "UNKNOWN_SECURITY_EXTENSIONS")
 load("//bazel:repositories.bzl", "PPC_SKIP_TARGETS", "WINDOWS_SKIP_TARGETS")
 
 licenses(["notice"])  # Apache 2
@@ -351,9 +352,9 @@ envoy_cc_fuzz_test(
         "//test/mocks/server:hot_restart_mocks",
         "//test/test_common:environment_lib",
     ] + select({
-        "//bazel:windows_x86_64": envoy_all_extensions(WINDOWS_SKIP_TARGETS),
-        "//bazel:linux_ppc": envoy_all_extensions(PPC_SKIP_TARGETS),
-        "//conditions:default": envoy_all_extensions(),
+        "//bazel:windows_x86_64": envoy_all_extensions(WINDOWS_SKIP_TARGETS + UNKNOWN_SECURITY_EXTENSIONS),
+        "//bazel:linux_ppc": envoy_all_extensions(PPC_SKIP_TARGETS + UNKNOWN_SECURITY_EXTENSIONS),
+        "//conditions:default": envoy_all_extensions(UNKNOWN_SECURITY_EXTENSIONS),
     }),
 )
 
