--- a/test/server/BUILD
+++ b/test/server/BUILD
@@ -1,5 +1,5 @@
 load(
-65;6203;1c    "//bazel:envoy_build_system.bzl",
+    "//bazel:envoy_build_system.bzl",
     "envoy_benchmark_test",
     "envoy_cc_benchmark_binary",
     "envoy_cc_fuzz_test",
