--- a/source/extensions/filters/network/mysql_proxy/BUILD
+++ b/source/extensions/filters/network/mysql_proxy/BUILD
@@ -13,6 +13,19 @@ licenses(["notice"])  # Apache 2
 envoy_extension_package()
 
 envoy_cc_library(
+    name = "stats_interface",
+    hdrs = [
+        "stats.h",
+    ],
+    deps = [
+        "//include/envoy/stats:stats_interface",
+        "//include/envoy/stats:stats_macros",
+        "@envoy_api//envoy/config/core/v3:pkg_cc_proto",
+        "@envoy_api//envoy/extensions/filters/network/mysql_proxy/v3:pkg_cc_proto",
+    ],
+)
+
+envoy_cc_library(
     name = "filter_lib",
     srcs = [
         "mysql_filter.cc",
@@ -23,13 +36,36 @@ envoy_cc_library(
     deps = [
         ":codec_lib",
         ":decoder_lib",
+        ":route_lib",
+        ":stats_interface",
         "//include/envoy/network:filter_interface",
         "//include/envoy/server:filter_config_interface",
-        "//include/envoy/stats:stats_interface",
-        "//include/envoy/stats:stats_macros",
         "//source/common/network:filter_lib",
         "//source/extensions/filters/network:well_known_names",
         "@envoy_api//envoy/config/core/v3:pkg_cc_proto",
+        "@envoy_api//envoy/extensions/filters/network/mysql_proxy/v3:pkg_cc_proto",
+    ],
+)
+
+envoy_cc_library(
+    name = "terminal_filter_lib",
+    srcs = [
+        "mysql_terminal_filter.cc",
+    ],
+    hdrs = [
+        "mysql_terminal_filter.h",
+    ],
+    deps = [
+        ":codec_lib",
+        ":decoder_lib",
+        ":route_lib",
+        ":stats_interface",
+        "//include/envoy/network:filter_interface",
+        "//include/envoy/server:filter_config_interface",
+        "//source/common/network:filter_lib",
+        "//source/extensions/filters/network:well_known_names",
+        "@envoy_api//envoy/config/core/v3:pkg_cc_proto",
+        "@envoy_api//envoy/extensions/filters/network/mysql_proxy/v3:pkg_cc_proto",
     ],
 )
 
@@ -53,7 +89,9 @@ envoy_cc_library(
     deps = [
         ":codec_interface",
         ":util_lib",
+        "//include/envoy/upstream:cluster_manager_interface",
         "//source/common/buffer:buffer_lib",
+        "//source/common/config:datasource_lib",
         "//source/extensions/common/sqlutils:sqlutils_lib",
     ],
 )
@@ -85,6 +123,30 @@ envoy_cc_library(
 )
 
 envoy_cc_library(
+    name = "route_interface",
+    hdrs = ["route.h"],
+    deps = [
+        "//include/envoy/upstream:cluster_manager_interface",
+        "@envoy_api//envoy/extensions/filters/network/mysql_proxy/v3:pkg_cc_proto",
+    ],
+)
+
+envoy_cc_library(
+    name = "route_lib",
+    srcs = [
+        "route_impl.cc",
+    ],
+    hdrs = [
+        "route_impl.h",
+    ],
+    deps = [
+        ":route_interface",
+        "//include/envoy/upstream:cluster_manager_interface",
+        "@envoy_api//envoy/extensions/filters/network/mysql_proxy/v3:pkg_cc_proto",
+    ],
+)
+
+envoy_cc_library(
     name = "config_interface",
     hdrs = ["mysql_config.h"],
     deps = [
@@ -112,8 +174,10 @@ envoy_cc_extension(
     status = "alpha",
     deps = [
         ":filter_lib",
+        ":terminal_filter_lib",
         "//source/extensions/filters/network:well_known_names",
         "//source/extensions/filters/network/common:factory_base_lib",
+        "@envoy_api//envoy/config/core/v3:pkg_cc_proto",
         "@envoy_api//envoy/extensions/filters/network/mysql_proxy/v3:pkg_cc_proto",
     ],
 )
