--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
-addopts = -raq --ignore=tools/testing/external/*,__init__.py,testing/conf --color=yes --cov-append -p  tools.testing.plugin --cov-config=.coveragerc -vv tools
+addopts = -raq --mypy --ignore=tools/testing/external/*,__init__.py,testing/conf --color=yes --cov-append -p  tools.testing.plugin --cov-config=.coveragerc -vv tools
 testpaths =
 	  tests
