--- a/test/extensions/filters/http/ip_tagging/BUILD
+++ b/test/extensions/filters/http/ip_tagging/BUILD
@@ -26,6 +26,7 @@ envoy_extension_cc_test(
         "//test/mocks/runtime:runtime_mocks",
         "//test/mocks/stats:stats_mocks",
         "//test/test_common:utility_lib",
+        "//test/mocks/server:factory_context_mocks",
         "@envoy_api//envoy/extensions/filters/http/ip_tagging/v3:pkg_cc_proto",
     ],
 )
