refactor mysql filter
Signed-off-by: qinggniq <livewithblank@gmail.com>

--- a/source/extensions/filters/network/mysql_proxy/BUILD
+++ b/source/extensions/filters/network/mysql_proxy/BUILD
@@ -54,14 +54,8 @@ envoy_cc_library(
         "mysql_terminal_filter.h",
     ],
     deps = [
-        ":codec_lib",
-        ":decoder_lib",
+        ":filter_lib",
         ":route_lib",
-        ":stats_interface",
-        "//include/envoy/network:filter_interface",
-        "//include/envoy/server:filter_config_interface",
-        "//source/common/network:filter_lib",
-        "//source/extensions/filters/network:well_known_names",
         "@envoy_api//envoy/config/core/v3:pkg_cc_proto",
         "@envoy_api//envoy/extensions/filters/network/mysql_proxy/v3:pkg_cc_proto",
     ],
