Add doc page of connection limit filter
Signed-off-by: delli <delli@microsoft.com>

--- a/source/extensions/filters/network/connection_limit/BUILD
+++ b/source/extensions/filters/network/connection_limit/BUILD
@@ -7,6 +7,9 @@ load(
 
 licenses(["notice"])  # Apache 2
 
+# connection limit L4 network filter
+# Public docs: docs/root/configuration/network_filters/connection_limit_filter.rst
+
 envoy_extension_package()
 
 envoy_cc_library(
