--- a/test/extensions/filters/network/wasm/test_data/BUILD
+++ b/test/extensions/filters/network/wasm/test_data/BUILD
@@ -18,6 +18,15 @@ wasm_rust_binary(
     ],
 )
 
+wasm_rust_binary(
+    name = "panic_rust.wasm",
+    srcs = ["panic_rust.rs"],
+    deps = [
+        "@proxy_wasm_rust_sdk//:proxy_wasm",
+        "@proxy_wasm_rust_sdk//bazel/cargo:log",
+    ],
+)
+
 envoy_cc_library(
     name = "test_cpp_plugin",
     srcs = [
@@ -40,6 +49,7 @@ envoy_wasm_cc_binary(
     name = "test_cpp.wasm",
     srcs = [
         "test_cpp.cc",
+        "test_panic_cpp.cc",
         "test_resume_call_cpp.cc",
     ],
     deps = [
