--- a/source/extensions/filters/network/kafka/mesh/command_handlers/BUILD
+++ b/source/extensions/filters/network/kafka/mesh/command_handlers/BUILD
@@ -25,7 +25,7 @@ envoy_cc_library(
         "//source/extensions/filters/network/kafka:kafka_response_parser_lib",
         "//source/extensions/filters/network/kafka:tagged_fields_lib",
         "//source/extensions/filters/network/kafka/mesh:abstract_command_lib",
-        "//source/extensions/filters/network/kafka/mesh:clustering_lib",
+        "//source/extensions/filters/network/kafka/mesh:upstream_config_lib",
         "//source/extensions/filters/network/kafka/mesh:upstream_kafka_facade_lib",
     ],
 )
@@ -44,7 +44,7 @@ envoy_cc_library(
         "//source/extensions/filters/network/kafka:kafka_request_parser_lib",
         "//source/extensions/filters/network/kafka:kafka_response_parser_lib",
         "//source/extensions/filters/network/kafka/mesh:abstract_command_lib",
-        "//source/extensions/filters/network/kafka/mesh:clustering_lib",
+        "//source/extensions/filters/network/kafka/mesh:upstream_config_lib",
         "//source/extensions/filters/network/kafka/mesh:upstream_kafka_facade_lib",
     ],
 )
@@ -63,7 +63,7 @@ envoy_cc_library(
         "//source/extensions/filters/network/kafka:kafka_request_parser_lib",
         "//source/extensions/filters/network/kafka:kafka_response_parser_lib",
         "//source/extensions/filters/network/kafka/mesh:abstract_command_lib",
-        "//source/extensions/filters/network/kafka/mesh:clustering_lib",
+        "//source/extensions/filters/network/kafka/mesh:upstream_config_lib",
         "//source/extensions/filters/network/kafka/mesh:upstream_kafka_facade_lib",
     ],
 )
