--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -161,16 +161,9 @@ sphinx-tabs==2.1.0 \
     --hash=sha256:0b5a8dd71d87197a01eef3b9d1e1a70513f4dd45e8af7783d1ab74c3fb2cbc6c \
     --hash=sha256:9d8db61afe9499aa84b33bc1c0d891f8a0df88ae513739f5babde15430c1fdaf
     # via -r docs/requirements.txt
-sphinx==3.5.4 \
-    --hash=sha256:19010b7b9fa0dc7756a6e105b2aacd3a80f798af3c25c273be64d7beeb482cb1 \
-    --hash=sha256:2320d4e994a191f4b4be27da514e46b3d6b420f2ff895d064f52415d342461e8
-    # via
-    #   -r docs/requirements.txt
-    #   sphinx-copybutton
-    #   sphinx-rtd-theme
-    #   sphinx-tabs
-    #   sphinxcontrib-httpdomain
-    #   sphinxext-rediraffe
+sphinx==4.0.0b1 \
+    --hash=sha256:80be0b4bac5b4b1d7fff13c9e255f321492cd0e12559388321a319611a84cc47 \
+    --hash=sha256:831c946b9fdd573ca05b9379a39b19103397c6b65049c0487a3efbb164d4be72
 sphinxcontrib-applehelp==1.0.2 \
     --hash=sha256:806111e5e962be97c29ec4c1e7fe277bfd19e9652fb1a4392105b43e01af885a \
     --hash=sha256:a072735ec80e7675e3f432fcae8610ecf509c5f1869d17e2eecff44389cdbc58
