move lower case string to common and add new interface to trace context for case-insensitive key
Signed-off-by: wbpcode <comems@msn.com>

--- a/include/envoy/common/BUILD
+++ b/include/envoy/common/BUILD
@@ -91,3 +91,11 @@ envoy_cc_library(
     name = "scope_tracker_interface",
     hdrs = ["scope_tracker.h"],
 )
+
+envoy_cc_library(
+    name = "lower_case_string",
+    hdrs = ["lower_case_string.h"],
+    deps = [
+        "//source/common/common:assert_lib",
+    ],
+)
