--- a/configs/envoyproxy_io_proxy_http3_downstream.template.yaml
+++ b/configs/envoyproxy_io_proxy_http3_downstream.template.yaml
@@ -7,6 +7,56 @@ admin:
       port_value: 9901
 static_resources:
   listeners:
+    - name: listener_tcp
+      address:
+        socket_address:
+          protocol: TCP
+          address: 0.0.0.0
+          port_value: 10000
+      reuse_port: true
+      udp_listener_config:
+        quic_options: {}
+        downstream_socket_config:
+          prefer_gro: true
+      filter_chains:
+        transport_socket:
+          name: envoy.transport_sockets.tls
+          typed_config:
+            "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
+            downstream_tls_context:
+              common_tls_context:
+                alpn_protocols: h3
+                tls_certificates:
+                  certificate_chain:
+                    filename: test/config/integration/certs/servercert.pem
+                  private_key:
+                    filename: test/config/integration/certs/serverkey.pem
+        filters:
+        - name: envoy.filters.network.http_connection_manager
+          typed_config:
+            "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
+            codec_type: HTTP2
+            stat_prefix: ingress_http
+            route_config:
+              name: local_route
+              virtual_hosts:
+              - name: local_service
+                response_headers_to_add:
+                  - header:
+                      key: alt-svc
+                      value: h3=":10000"; ma=86400, h3-29=":10000"; ma=86400
+                domains: ["*"]
+                routes:
+                - match:
+                    prefix: "/"
+                  route:
+                    host_rewrite_literal: www.envoyproxy.io
+                    cluster: service_envoyproxy_io
+            http3_protocol_options:
+            http_filters:
+            - name: envoy.filters.http.router
+
+  listeners:
     - name: listener_udp
       address:
         socket_address:
@@ -41,10 +91,6 @@ static_resources:
               name: local_route
               virtual_hosts:
               - name: local_service
-                response_headers_to_add:
-                  - header:
-                      key: alt-svc
-                      value: h3=":10000"; ma=86400, h3-29=":10000"; ma=86400
                 domains: ["*"]
                 routes:
                 - match:
