--- a/test/integration/BUILD
+++ b/test/integration/BUILD
@@ -1548,6 +1548,7 @@ envoy_cc_test(
         "//source/common/network:utility_lib",
         "//source/extensions/filters/http/health_check:config",
         "//test/common/grpc:grpc_client_integration_lib",
+        "//test/test_common:network_utility_lib",
         "//test/test_common:resources_lib",
         "//test/test_common:utility_lib",
         "@envoy_api//envoy/config/bootstrap/v3:pkg_cc_proto",
