--- a/api/BUILD
+++ b/api/BUILD
@@ -299,7 +299,7 @@ proto_library(
         "//envoy/type/tracing/v3:pkg",
         "//envoy/type/v3:pkg",
         "//envoy/watchdog/v3alpha:pkg",
-        "@envoy//source/extensions/filters/http/cache/simple_http_cache:pkg",
+        "//source/extensions/filters/http/cache/simple_http_cache:pkg",
     ],
 )
 
