--- a/api/versioning/BUILD
+++ b/api/versioning/BUILD
@@ -61,6 +61,7 @@ proto_library(
         "//envoy/extensions/filters/http/aws_request_signing/v3:pkg",
         "//envoy/extensions/filters/http/buffer/v3:pkg",
         "//envoy/extensions/filters/http/cache/v3alpha:pkg",
+        "//envoy/extensions/filters/http/cache/v3alpha/simple_http_cache:pkg",
         "//envoy/extensions/filters/http/cdn_loop/v3alpha:pkg",
         "//envoy/extensions/filters/http/composite/v3:pkg",
         "//envoy/extensions/filters/http/compressor/v3:pkg",
