testing static base image
Signed-off-by: Oleksiy Pylypenko <oleksiy.pylypenko@gmail.com>

--- a/examples/tls-inspector/Dockerfile
+++ b/examples/tls-inspector/Dockerfile
@@ -1,5 +1,5 @@
 FROM envoyproxy/envoy-distroless-dev:latest
 
-COPY --chmod=0644 ./envoy.yaml /etc/envoy.yaml
-# RUN chmod go+r /etc/envoy.yaml
+COPY ./envoy.yaml /etc/envoy.yaml
+
 CMD ["/usr/local/bin/envoy", "-c /etc/envoy.yaml"]
