--- a/source/common/http/BUILD
+++ b/source/common/http/BUILD
@@ -173,6 +173,7 @@ envoy_cc_library(
     srcs = ["conn_pool_grid.cc"],
     hdrs = ["conn_pool_grid.h"],
     deps = [
+        ":alternate_protocols",
         ":http3_status_tracker",
         ":mixed_conn_pool",
         "//source/common/http/http3:conn_pool_lib",
