grid: Create a new AlternateProtocolsCacheManager for creating per-config AlternateProtocolsCaches
Signed-off-by: Ryan Hamilton <rch@google.com>

--- a/source/common/http/BUILD
+++ b/source/common/http/BUILD
@@ -161,10 +161,24 @@ envoy_cc_library(
 
 envoy_cc_library(
     name = "alternate_protocols_cache",
-    srcs = ["alternate_protocols_cache.cc"],
-    hdrs = ["alternate_protocols_cache.h"],
+    srcs = [
+        "alternate_protocols_cache_impl.cc",
+        "alternate_protocols_cache_manager_impl.cc",
+    ],
+    hdrs = [
+        "alternate_protocols_cache.h",
+        "alternate_protocols_cache_impl.h",
+        "alternate_protocols_cache_manager_impl.h",
+    ],
     deps = [
+        "//include/envoy/common:backoff_strategy_interface",
+        "//include/envoy/common:random_generator_interface",
         "//include/envoy/common:time_interface",
+        "//include/envoy/event:dispatcher_interface",
+        "//include/envoy/singleton:manager_interface",
+        "//include/envoy/thread_local:thread_local_interface",
+        "//include/envoy/upstream:resource_manager_interface",
+        "@envoy_api//envoy/extensions/clusters/dynamic_forward_proxy/v3:pkg_cc_proto",
     ],
 )
 
