--- a/source/common/upstream/BUILD
+++ b/source/common/upstream/BUILD
@@ -56,6 +56,7 @@ envoy_cc_library(
         ":subset_lb_lib",
         "//include/envoy/api:api_interface",
         "//include/envoy/event:dispatcher_interface",
+        "@envoy_api//envoy/extensions/clusters/dynamic_forward_proxy/v3:pkg_cc_proto",
         "//include/envoy/http:codes_interface",
         "//include/envoy/local_info:local_info_interface",
         "//include/envoy/network:dns_interface",
@@ -74,6 +75,7 @@ envoy_cc_library(
         "//source/common/config:xds_resource_lib",
         "//source/common/grpc:async_client_manager_lib",
         "//source/common/http:async_client_lib",
+        "//source/common/http:alternate_protocols_cache",
         "//source/common/http:mixed_conn_pool",
         "//source/common/http/http1:conn_pool_lib",
         "//source/common/http/http2:conn_pool_lib",
