--- a/tools/type_whisperer/BUILD
+++ b/tools/type_whisperer/BUILD
@@ -68,14 +68,14 @@ type_database(
 
 file_descriptor_set_text(
     name = "all_protos_pb_text",
-    deps = ["@envoy_api_canonical//:all_protos"],
+    deps = ["@envoy_api_canonical//:v3_protos"],
 )
 
 file_descriptor_set_text(
     name = "all_protos_with_ext_pb_text",
     with_external_deps = True,
     deps = [
-        "@envoy_api_canonical//:all_protos",
+        "@envoy_api_canonical//:v3_protos",
     ],
 )
 
