--- a/.azure-pipelines/pipelines.yml
+++ b/.azure-pipelines/pipelines.yml
@@ -56,7 +56,7 @@ stages:
               GCS_ARTIFACT_BUCKET: $(GcsArtifactBucket)
 
       - job: format
-        dependsOn: ["format_pre"]
+        dependsOn: []  #  "format_pre"]
         pool:
           vmImage: "ubuntu-18.04"
         steps:
@@ -74,6 +74,7 @@ stages:
               BAZEL_REMOTE_INSTANCE: projects/envoy-ci/instances/default_instance
               GCP_SERVICE_ACCOUNT_KEY: $(GcpServiceAccountKey)
             displayName: "Run check format scripts"
+            continueOnError: true
 
           - task: PublishBuildArtifacts@1
             inputs:
