--- a/source/extensions/filters/listener/original_dst/BUILD
+++ b/source/extensions/filters/listener/original_dst/BUILD
@@ -13,10 +13,20 @@ licenses(["notice"])  # Apache 2
 envoy_extension_package()
 
 envoy_cc_library(
+    name = "config_lib",
+    hdrs = ["config.h"],
+    deps = [
+        "//include/envoy/network:filter_interface",
+        "@envoy_api//envoy/extensions/filters/listener/original_dst/v3:pkg_cc_proto",
+    ],
+)
+
+envoy_cc_library(
     name = "original_dst_lib",
     srcs = ["original_dst.cc"],
     hdrs = ["original_dst.h"],
     deps = [
+        ":config_lib",
         "//include/envoy/network:filter_interface",
         "//include/envoy/network:listen_socket_interface",
         "//source/common/common:assert_lib",
@@ -28,7 +38,12 @@ envoy_cc_library(
 
 envoy_cc_extension(
     name = "config",
-    srcs = ["config.cc"],
+    srcs = [
+        "config_factory.cc",
+    ],
+    hdrs = [
+        "config_factory.h",
+    ],
     category = "envoy.filters.listener",
     # TODO(#9953) clean up.
     extra_visibility = [
@@ -36,10 +51,10 @@ envoy_cc_extension(
     ],
     security_posture = "robust_to_untrusted_downstream",
     deps = [
+        ":config_lib",
         ":original_dst_lib",
         "//include/envoy/registry",
         "//include/envoy/server:filter_config_interface",
         "//source/extensions/filters/listener:well_known_names",
-        "@envoy_api//envoy/extensions/filters/listener/original_dst/v3:pkg_cc_proto",
     ],
 )
